--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["nodejs-18_x", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm ci --production=false"]
+cmds = ["npm install --include=dev"]
 
 [phases.build]
 cmds = ["echo 'Build concluído com sucesso'"]
